--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ section {
 button {
   color: var(--violet);
   background-color: var(--white);
+  box-shadow: 3px 5px var(--violet);
   font-size: 20px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
